--- a/Resources/Private/Templates/Widget/ListOfMembersWidget.html
+++ b/Resources/Private/Templates/Widget/ListOfMembersWidget.html
@@ -1,5 +1,4 @@
-<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
-      data-namespace-typo3-fluid="true">
+<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 <div class="widget-content-title">
     <span>
         {widgetTitle}
@@ -11,23 +10,33 @@
             <f:then>
                 <table class="widget-table">
                     <thead>
-                    <tr>
-                        <th scope="col"><f:translate key="LLL:EXT:beuser/Resources/Private/Language/locallang.xlf:userName" /></th>
-                        <th scope="col"><f:translate key="LLL:EXT:beuser/Resources/Private/Language/locallang.xlf:email" /></th>
-                        <th scope="col"><f:translate key="LLL:EXT:beuser/Resources/Private/Language/locallang.xlf:realName" /></th>
-                        <th scope="col"><f:translate key="LLL:EXT:beuser/Resources/Private/Language/locallang.xlf:lastLogin" /></th>
-                    </tr>
+                        <tr>
+                            <th scope="col">
+                                <f:translate key="LLL:EXT:beuser/Resources/Private/Language/locallang.xlf:userName" />
+                            </th>
+                            <th scope="col">
+                                <f:translate key="LLL:EXT:beuser/Resources/Private/Language/locallang.xlf:email" />
+                            </th>
+                            <th scope="col">
+                                <f:translate key="LLL:EXT:beuser/Resources/Private/Language/locallang.xlf:realName" />
+                            </th>
+                            <th scope="col">
+                                <f:translate key="LLL:EXT:beuser/Resources/Private/Language/locallang.xlf:lastLogin" />
+                            </th>
+                        </tr>
                     </thead>
                     <tbody>
-                    <f:for each="{data.members}" as="element">
-                        <f:if condition="{element.users.0}">
-                            <f:if condition="!{data.isAdmin}">
-                                <tr>
-                                    <td colspan="4" class="group-name">
-                                        <f:translate key="LLL:EXT:qc_widgets/Resources/Private/Language/Module/ListOfMembers/locallang.xlf:group" /> <strong>{element.groupName}</strong>
-                                    </td>
-                                </tr>
-                            </f:if>
+                        <f:for each="{data.members}" as="element">
+                            <f:if condition="{element.users.0}">
+                                <f:if condition="!{data.isAdmin}">
+                                    <tr>
+                                        <td colspan="4" class="group-name">
+                                            <f:translate
+                                                key="LLL:EXT:qc_widgets/Resources/Private/Language/Module/ListOfMembers/locallang.xlf:group" />
+                                            <strong>{element.groupName}</strong>
+                                        </td>
+                                    </tr>
+                                </f:if>
                                 <f:for each="{element.users}" as="item">
                                     <tr>
                                         <td>{item.username}</td>
@@ -37,15 +46,16 @@
                                     </tr>
                                 </f:for>
                             </f:if>
-                    </f:for>
+                        </f:for>
                     </tbody>
                 </table>
             </f:then>
             <f:else>
-                <f:render partial="NoResult"/>
+                <f:render partial="NoResult" />
             </f:else>
         </f:if>
     </div>
 </div>
 <br>
+
 </html>
