fix label translation

--- a/Resources/Private/Templates/Widget/RecentlyModifiedContentWidget.html
+++ b/Resources/Private/Templates/Widget/RecentlyModifiedContentWidget.html
@@ -18,10 +18,12 @@
                         </th>
 
                         <th scope="col">
-                            Header/Extract
+                            <f:translate
+                                    key="LLL:EXT:qc_widgets/Resources/Private/Language/Module/RecentlyModifiedContent/locallang.xlf:headerExtract"  />
                         </th>
                         <th scope="col">
-                            Status
+                            <f:translate
+                                    key="LLL:EXT:qc_widgets/Resources/Private/Language/locallang.xlf:status" />
                         </th>
                         <th scope="col">
                             <f:translate
