add height for status icons

--- a/Resources/Private/Templates/Widget/RecentlyModifiedContentWidget.html
+++ b/Resources/Private/Templates/Widget/RecentlyModifiedContentWidget.html
@@ -64,13 +64,13 @@
                                 <f:if condition="{item.status} == 'expired'">
                                     <span>
                                         <f:image src="EXT:qc_widgets/Resources/Public/Icons/overlay-endtime.svg"
-                                            width="18" title="{item.statusMessage}" />
+                                            width="18" height="18" title="{item.statusMessage}" />
                                     </span>
                                 </f:if>
                                 <f:if condition="{item.status} == 'notAvailable'">
                                     <span>
                                         <f:image src="EXT:qc_widgets/Resources/Public/Icons/overlay-scheduled.svg"
-                                            width="18" title="{item.statusMessage}" />
+                                            width="18" height="18" title="{item.statusMessage}" />
                                     </span>
                                 </f:if>
                             </td>
