fix-width-height-for-icons

--- a/Resources/Private/Templates/Widget/TableOfPagesWidget.html
+++ b/Resources/Private/Templates/Widget/TableOfPagesWidget.html
@@ -48,20 +48,20 @@
                                         <f:if condition="{item.status} == 'expired'">
                                             <span>
                                                 <f:image src="EXT:qc_widgets/Resources/Public/Icons/overlay-endtime.svg"
-                                                    width="18" height="18" title="{item.statusMessage}" />
+                                                    width="18c" height="18c" title="{item.statusMessage}" />
                                             </span>
                                         </f:if>
                                         <f:if condition="{item.status} == 'notAvailable'">
                                             <span>
                                                 <f:image
                                                     src="EXT:qc_widgets/Resources/Public/Icons/overlay-scheduled.svg"
-                                                    width="18" height="18" title="{item.statusMessage}" />
+                                                    width="18c" height="18c" title="{item.statusMessage}" />
                                             </span>
                                         </f:if>
                                         <f:if condition="{item.hidden}">
                                             <span>
                                                 <f:image src="EXT:qc_widgets/Resources/Public/Icons/overlay-hidden.svg"
-                                                    width="18" height="18" title="{item.hiddenMessage}" />
+                                                    width="18c" height="18c" title="{item.hiddenMessage}" />
                                             </span>
                                         </f:if>
                                     </div>
