fix traduction, code refactoring

--- a/Resources/Private/Templates/Widget/NumberOfRecordsByContent.html
+++ b/Resources/Private/Templates/Widget/NumberOfRecordsByContent.html
@@ -5,7 +5,7 @@
         {widgetTitle}
     </span>
 </div>
-<f:variable  name="localFile" value="LLL:EXT:qc_widgets/Resources/Private/Language/Module/NumberOfRecordsByContentType/locallang.xlf"/>
+<f:variable  name="localLangFile" value="LLL:EXT:qc_widgets/Resources/Private/Language/Module/NumberOfRecordsByContentType/locallang.xlf:"/>
 <div class="widget-content-main">
     <div class="widget-table-wrapper">
 
@@ -15,9 +15,8 @@
                 <table class="widget-table">
                     <thead>
                         <tr>
-                            <f:comment>
                                 <th scope="col">
-                                    <f:translate
+                                   <f:translate
                                             key="LLL:EXT:qc_widgets/Resources/Private/Language/Module/NumberOfRecordsByContentType/locallang.xlf:table"  />
                                 </th>
                                 <th scope="col">
@@ -35,8 +34,6 @@
                                     <f:translate
                                             key="LLL:EXT:qc_widgets/Resources/Private/Language/Module/NumberOfRecordsByContentType/locallang.xlf:totalNumberOfRecords"  />
                                 </th>
-                            </f:comment>
-
                         </tr>
                     </thead>
                     <tbody>
