fix tradcution label

--- a/Resources/Private/Templates/Widget/NumberOfRecordsByContent.html
+++ b/Resources/Private/Templates/Widget/NumberOfRecordsByContent.html
@@ -28,7 +28,7 @@
                                 </th>
                                 <th scope="col">
                                     <f:translate
-                                            key="LLL:EXT:qc_widgets/Resources/Private/Language/Module/NumberOfRecordsByContentType/locallang.xlf:last"  />24h
+                                            key="LLL:EXT:qc_widgets/Resources/Private/Language/Module/NumberOfRecordsByContentType/locallang.xlf:lastF"  />24h
                                 </th>
                                 <th scope="col">
                                     <f:translate
