--- a/Resources/Private/Templates/Widget/RecentlyModifiedContentWidget.html
+++ b/Resources/Private/Templates/Widget/RecentlyModifiedContentWidget.html
@@ -62,21 +62,21 @@
                             </td>
                             <td>
                                 <f:if condition="{item.status} == 'expired'">
-                                    <span>
+                                    <span class="status-icon">
                                         <f:image src="EXT:qc_widgets/Resources/Public/Icons/overlay-endtime.svg"
-                                            width="18c" height="18c" title="{item.statusMessage}" />
+                                           title="{item.statusMessage}"/>
                                     </span>
                                 </f:if>
                                 <f:if condition="{item.status} == 'notAvailable'">
-                                    <span>
+                                    <span class="status-icon">
                                         <f:image src="EXT:qc_widgets/Resources/Public/Icons/overlay-scheduled.svg"
-                                            width="18c" height="18c" title="{item.statusMessage}" />
+                                                 title="{item.statusMessage}" />
                                     </span>
                                 </f:if>
                                 <f:if condition="{item.status} == 'hidden'">
-                                    <span>
+                                    <span class="status-icon">
                                         <f:image src="EXT:qc_widgets/Resources/Public/Icons/overlay-hidden.svg"
-                                                 width="18c" height="18c" title="{item.statusMessage}" />
+                                                 title="{item.statusMessage}" />
                                     </span>
                                 </f:if>
 
