--- a/Resources/Private/Templates/Widget/TableOfPagesWidget.html
+++ b/Resources/Private/Templates/Widget/TableOfPagesWidget.html
@@ -46,22 +46,22 @@
                                 <td>
                                     <div class="pages-status">
                                         <f:if condition="{item.status} == 'expired'">
-                                            <span>
+                                            <span class="status-icon">
                                                 <f:image src="EXT:qc_widgets/Resources/Public/Icons/overlay-endtime.svg"
-                                                    width="18c" height="18c" title="{item.statusMessage}" />
+                                                  title="{item.statusMessage}" />
                                             </span>
                                         </f:if>
                                         <f:if condition="{item.status} == 'notAvailable'">
-                                            <span>
+                                            <span class="status-icon">
                                                 <f:image
                                                     src="EXT:qc_widgets/Resources/Public/Icons/overlay-scheduled.svg"
-                                                    width="18c" height="18c" title="{item.statusMessage}" />
+                                                    title="{item.statusMessage}" />
                                             </span>
                                         </f:if>
                                         <f:if condition="{item.hidden}">
-                                            <span>
+                                            <span class="status-icon">
                                                 <f:image src="EXT:qc_widgets/Resources/Public/Icons/overlay-hidden.svg"
-                                                    width="18c" height="18c" title="{item.hiddenMessage}" />
+                                                         title="{item.hiddenMessage}" />
                                             </span>
                                         </f:if>
                                     </div>
