--- a/Resources/Private/Templates/Widget/NumberOfRecordsByContent.html
+++ b/Resources/Private/Templates/Widget/NumberOfRecordsByContent.html
@@ -1,10 +1,5 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
       xmlns:be="http://typo3.org/ns/TYPO3/CMS/Backend/ViewHelpers" data-namespace-typo3-fluid="true">
-<div class="widget-content-title">
-    <span>
-        {widgetTitle}
-    </span>
-</div>
 <f:variable  name="localLangFile" value="LLL:EXT:qc_widgets/Resources/Private/Language/Module/NumberOfRecordsByContentType/locallang.xlf:"/>
 <div class="widget-content-main">
     <div class="widget-table-wrapper">
@@ -12,7 +7,7 @@
         <f:variable name="options" value="{0: 'totalRecordsByNumberOfDays', 1: 'totalRecordsForTheLast24h', 2: 'totalRecords'}" />
         <f:if condition="{data}">
             <f:then>
-                <table class="widget-table">
+                <table class="widget-table table table-striped table-hover">
                     <thead>
                         <tr>
                                 <th scope="col">
