--- a/Resources/Private/Templates/Widget/RecentlyModifiedContentWidget.html
+++ b/Resources/Private/Templates/Widget/RecentlyModifiedContentWidget.html
@@ -1,15 +1,10 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
     xmlns:be="http://typo3.org/ns/TYPO3/CMS/Backend/ViewHelpers" data-namespace-typo3-fluid="true">
 
-<div class="widget-content-title">
-    <span>
-        {widgetTitle}
-    </span>
-</div>
 <div class="widget-content-main">
     <f:if condition="{data.0}">
         <f:then>
-            <table class="widget-table">
+            <table class="widget-table table table-striped table-hover">
                 <thead>
                     <tr>
                         <th scope="col">
