--- a/Resources/Private/Templates/Widget/TableOfPagesWidget.html
+++ b/Resources/Private/Templates/Widget/TableOfPagesWidget.html
@@ -1,14 +1,9 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
-<div class="widget-content-title">
-    <span>
-        {widgetTitle}
-    </span>
-</div>
 <div class="widget-content-main">
     <div class="widget-table-wrapper">
         <f:if condition="{data.0}">
             <f:then>
-                <table class="widget-table">
+                <table class="widget-table table table-striped table-hover">
                     <thead>
                         <tr>
                             <th scope="col">Uid</th>
